2010-07-17	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1622/testing
	* psxchroot01/test.c, psxchroot01/psxchroot01.scn: Added two test
	cases to completely cover chroot().

2010-07-16	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* psxfile01/test.c: Avoid NULL pointer access.

2010-07-15	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1617/testing
	* psxfile01/test.c, psxfile01/psxfile01.scn: Added new cases to
	exercise_link_r and _unlink_r
	* psxstat/test.c, psxstat/psxstat.scn: Added new cases to exercise
	_lstat_r and _stat_r.
	* psxtime/test.c, psxtime/psxtime.scn: Added new cases to exercise
	_gettimeofday.

2010-07-16	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* psxstat/test.c: Avoid NULL pointer access.

2010-07-12	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1613/testing
	* psxfchx01/init.c, psxfchx01/Makefile.am, psxfchx01/.cvsignore,
	psxfchx01/psxfchx01.doc, psxfchx01/psxfchx01.scn: New
	tests. Improves coverage of fchdir, fchmod, fchown directives.
	* configure.ac, Makefile.am: Changes to accommodate new test.
	* psxstat/test.c, psxstat/psxstat.scn: Added new test case to test
	statvfs routine under libcsupport.

2010-07-09	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1610/testing
	* psx13/test.c, psx13/psx13.scn: Remove the test cases which
	exercise pipe. These are new a new test under psxpipe01/
	* psxpipe01/init.c, psxpipe01/Makefile.am,
	psxpipe01/psxpipe01.scn, psxpipe01/psxpipe01.doc: Added new test.
	* Makefile.am, configure.ac: Changes due to addition of new test:
	psxpipe01.

2010-07-08	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1608/testing
	* psxfile01/init.c: Add a simple test case: Open file as read-only
	and attemp to truncate. Improves coverage.

2010-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1606/cpukit
	* psxfatal_support/init.c: Remove
	INTERNAL_ERROR_INVALID_WORKSPACE_ADDRESS since it is not generated.

2010-07-07	Sebastian Huber <Sebastian.Huber@embedded-brains.de>
