@@ -1,5 +1,5 @@
 
-** POSIX TEST 13 ***
+*** POSIX TEST 13 ***
 
 Files initialized successfully.
 Testing device_lseek()... Failed!!!
