@@ -1704,12 +1704,13 @@ lstat( /my_mount_point/symlinks/a_dir_symlink/a_file_symlink ) returned
 ...st_ctime   Sat Dec 31 09:00:35 1988
 ...st_blksize 0
 ...st_blocks  0
-statvfs, with invalid path - expect EFAULT
+statvfs, with invalid path - expect ENOTSUP
 create /tmp -- OK
 statvfs, with valid path - expect ENOTSUP
 statvfs tested!
 Exercise the reentrant version - _stat_r - expect EFAULT
 Exercise the reentrant version - _lstat_r - expect EFAULT
+Try readlink with a bad buffer - expect EFAULT
 
 
 *** END OF STAT TEST 01 ***
